ACLOCAL_AMFLAGS = -I m4

noinst_bin_PROGRAMS=\
	addressbook \
	array \
	decode \
	float \
	map \
	pattern \
	pbc \
	test \
	varint
noinst_bindir=./

AM_CFLAGS="-I../src"
AM_LDFLAGS="-L../"
LDADD = ../libpbc.la

addressbook_SOURCES = addressbook.c

array_SOURCES = array.c

decode_SOURCES = decode.c

float_SOURCES = float.c

map_SOURCES = map.c

pattern_SOURCES = pattern.c

pbc_SOURCES = pbc.c

varint_SOURCES = addressbook.c

